--- a/truespeak/templates/register.html
+++ b/truespeak/templates/register.html
@@ -30,7 +30,7 @@
                     </div>
                     <button type="submit" class="btn btn-lg btn-primary register-button register_button">Register</button>
                     <div class="loading-gif register-loading">
-                        <img src="/static/img/flakes.gif"/>
+                        <img src="img/flakes.gif"/>
                     </div>
                     <span class="password-error-message register_error"> Oops, both passwords must be the same. </span>
                     <div style="clear:both;"></div>
