--- a/truespeak/templates/settings.html
+++ b/truespeak/templates/settings.html
@@ -31,7 +31,7 @@
                             <div class="settings_success"></div>
                             <div class="settings_error"></div>
                             <div class="loading-gif">
-                                <img src="/static/flakes.gif"/>
+                                <img src="flakes.gif"/>
                             </div>
                         </form>
                     </div>
