--- a/truespeak/templates/login.html
+++ b/truespeak/templates/login.html
@@ -27,7 +27,7 @@
                     <button type="submit" class="btn btn-lg btn-primary register-button login_button">Submit</button>
                     <span class="password-error-message login_error login-error-message"> Oops, email/password not found. Try again? </span>
                     <div class="loading-gif">
-                        <img src="/static/flakes.gif"/>
+                        <img src="img/flakes.gif"/>
                     </div>
                     <div style="clear:both;"></div>
                 </form>
