--- a/truespeak/static/css/base.css
+++ b/truespeak/static/css/base.css
@@ -339,3 +339,8 @@ h1.welcome-header {
     background-color: rgba(0,0,0,0);
     border: 1px solid #000;
 }
+
+.floated-wrapper {
+    width: 100%;
+    float: left;
+}
