--- a/truespeak/templates/initializing.html
+++ b/truespeak/templates/initializing.html
@@ -5,7 +5,7 @@
 
     <div class="initializing-image-wrapper">
         <div class="initializing-image">
-            <img src="img/flakes.gif"/>
+            <img src="/static/img/flakes.gif"/>
         </div>
     </div>
 
