--- a/truespeak/templates/about.html
+++ b/truespeak/templates/about.html
@@ -50,7 +50,7 @@
             <h3> Why should you trust us more than Google? </h3>
             <p>
                 The beauty of client-side encryption is you don't have to. We don't store your password. We don't have your private key.
-                The <a href="https://github.com/maximusfowler/true-speak" about="_blank">public key server</a> and <a href="https://github.com/joshblum/fakeblock" about="_blank">extension</a> are both public on GitHub.
+                The <a href="https://github.com/maximusfowler/true-speak" target="_blank">public key server</a> and <a href="https://github.com/joshblum/fakeblock" target="_blank">extension</a> are both public on GitHub.
             </p>
 
             <h3> What are the downsides? </h3>
