--- a/truespeak/templates/team.html
+++ b/truespeak/templates/team.html
@@ -28,9 +28,9 @@
                     </span> ({{ school }})
                 </h4>
                 <p class="handles">
-                    <a href="https://twitter.com/{{ twitter }}">
+                    <a href="https://twitter.com/{{ twitter }}" target="_blank">
                         <img src="https://si0.twimg.com/favicons/favicon.ico"> @{{ twitter }} </a> |
-                     <a href="http://github.com/{{ github }}/">
+                     <a href="http://github.com/{{ github }}/" target="_blank">
                         <img class="icon" src="https://github.com/favicon.ico"> {{ github }} 
                     </a>                
                 </p>
