--- a/truespeak/templates/settings.html
+++ b/truespeak/templates/settings.html
@@ -15,7 +15,7 @@
         <div class="jumbotron settings-wrapper">
 
             <div class="container">
-                <h1>Your Email Addresses</h1>
+                <h1>Registered Email Addresses</h1>
                 <div class="settings-bottom">
 
                         <form role="form">
