--- a/truespeak/templates/home.html
+++ b/truespeak/templates/home.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
+{% load filters %}
 
 {% block css %}
-    <link href="css/home.css" rel="stylesheet">
+    {% include_style "css/home" %}
 {% endblock %}
 
 {% block body %}
