--- a/truespeak/static/css/base.css
+++ b/truespeak/static/css/base.css
@@ -74,11 +74,7 @@
     filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
 }
 
-.register-input {
-    width: 75%;
-    height: 50px;
-    font-size: 19px;
-}
+
 
 .form-group {
     margin-bottom: 13px;
@@ -92,15 +88,6 @@ label {
     font-size: 20px;
     #color: rgb(228, 228, 228);
     color: rgb(145, 145, 145);
-}
-
-.snake-drawing {
-    position: absolute;
-    z-index: -1;
-    width: 549px;
-    float: right;
-    left: 47%;
-    top: 159px;
 }
 
 .already-registered {
@@ -161,13 +148,6 @@ span.password-error-message {
     margin-bottom: 25px;
 }
 
-.register-button {
-    margin-left: 1%;
-    margin-top: 25px;
-    max-width:400px;
-    width:75%;
-}
-
 .loading-gif {
     width: 100px;
     height: 100px;
@@ -175,6 +155,7 @@ span.password-error-message {
     margin-left:288px;
     margin-top: 22px;
     display:none;
+    background-image: url("/static/img/flakes.gif")
 }
 
 .login-wrapper .over-sound-of-music {
@@ -260,28 +241,8 @@ h1.welcome-header {
     display:none;
 }
 
-.register-explain {
-    width: 90%;
-    margin-top: 65px;
-}
-
-.register-container {
-}
-
 .white-text {
     position:absolute;
-}
-
-.register-loading {
-    position: absolute;
-    left: 27.4%;
-    top: 463px;
-}
-
-.register-explain-p {
-    font-size: 18px;
-    margin-bottom: 60px;
-    margin-top: 35px;
 }
 
 .tutorial-wrapper p {
