--- a/truespeak/templates/register.html
+++ b/truespeak/templates/register.html
@@ -1,59 +1,54 @@
 {% extends "base.html" %}
+{% load filters %}
 
+{% block css %}
+    {% include_style "css/register" %}
+{% endblock %}
 
 {% block body %}
 
 
     <div class="container">
 
-        <!-- Main component for a primary marketing message or call to action -->
-        <div class="jumbotron welcome-container register-container">
+        <div class="register-container">
 
-            {% comment %}
-             <img class="sound-of-music" src="https://d2nh4f9cbhlobh.cloudfront.net/_uploads/galleries/240/the-sound-of-music-image_2.jpg"/>
-            <img class="sound-of-music upside-down" src="https://d2nh4f9cbhlobh.cloudfront.net/_uploads/galleries/240/the-sound-of-music-image_2.jpg"/>
-            {% endcomment %}
-            <div class="over-sound-of-music">
-                <h1 class="sound-of-music-header">Welcome to ParselTongue</h1>
+            <div>
+                <h1 class="register-header">
+                    Welcome to ParselTongue
+                </h1>
                 <form role="form" class="register_form">
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Email</label>
                         <input type="email" class="form-control register-input register_email" id="exampleInputEmail1" placeholder="Enter email">
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
                         <input type="password" class="form-control register-input register_password1" id="exampleInputPassword1" placeholder="Password">
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Same Password</label>
-                        <input type="password" class="form-control register-input register_password2" id="exampleInputPassword2" placeholder="Password">
+                        <input type="password" class="form-control register-input register_password2" id="exampleInputPassword2" placeholder="Retype Password">
                     </div>
-                    <button type="submit" class="btn btn-lg btn-primary register-button register_button">Register</button>
-                    <div class="loading-gif register-loading">
-                        <img src="/static/img/flakes.gif"/>
-                    </div>
-                    <span class="password-error-message register_error"> Oops, both passwords must be the same. </span>
+                    <button type="submit" class="btn btn-lg btn-primary register-button register_button">
+                        Register
+                    </button>
+                    <div class="loading-gif register-loading"></div>
+                    <span class="password-error-message register_error"> 
+                        Oops, both passwords must be the same. 
+                    </span>
                     <div style="clear:both;"></div>
                 </form>
-                <img class="snake-drawing" src="http://upload.wikimedia.org/wikipedia/commons/1/1d/Black_snake_1_%28PSF%29.png"/>
+                <img class="snake-drawing" src="/static/img/snake-drawing.png"/>
                 <div style="clear:both;"></div>
             </div>
 
-                    <div class="register-explain">
-            <h3>Choose a password you will remember! Your password is used to encyrpt your private key and is non-recoverable.</h3>
-            <p class="register-explain-p">
-                When you register ParselTongue it initializes your private key and uploads a matching public key that gets associated
-                with the email address you registered which allows other users to send emails to this email address encrypted
-                so that only you can read them. To learn more about how ParselTongue works read our <a href="/about/">FAQ</a>.
-            </p>
+            <div class="register-explain">
+                <h3>
+                    Choose a password you will remember! <br>This is used to encyrpt your private key and is <strong> non-recoverable. </strong>
+                </h3>
+                <p>
+                    To learn about how ParselTongue works and why the password is not recoverable, read our <a href="/about/">FAQ</a>.
+                </p>
+            </div>
+
         </div>
-
-            <div style="clear:both;"></div>
-        </div>
-
-
-
-        <div style="clear:both;"></div>
 
     </div>
 
