login page start

--- a/truespeak/templates/register.html
+++ b/truespeak/templates/register.html
@@ -33,10 +33,8 @@
                     <span class="password-error-message register_error"> 
                         Oops, both passwords must be the same. 
                     </span>
-                    <div style="clear:both;"></div>
                 </form>
-                <img class="snake-drawing" src="/static/img/snake-drawing.png"/>
-                <div style="clear:both;"></div>
+                <img class="register-snake" src="/static/img/register-snake.png"/>
             </div>
 
             <div class="register-explain">
