--- a/truespeak/templates/login.html
+++ b/truespeak/templates/login.html
@@ -1,39 +1,38 @@
 {% extends "base.html" %}
+{% load filters %}
+
+{% block css %}
+    {% include_style "css/login" %}
+{% endblock %}
 
 
 {% block body %}
 
-
     <div class="container">
-
-        <!-- Main component for a primary marketing message or call to action -->
         <div class="jumbotron welcome-container login-wrapper">
 
             <div class="over-sound-of-music">
-                <h1 class="sound-of-music-header">Sign In</h1>
+                <h1 class="sound-of-music-header">
+                    Sign In
+                </h1>
                 <form role="form">
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Email</label>
                         <input type="email" class="form-control register-input login_email" id="exampleInputEmail1" placeholder="Enter email">
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
                         <input type="password" class="form-control register-input login_password" id="exampleInputPassword1" placeholder="Password">
                     </div>
-                    <button type="submit" class="btn btn-lg btn-primary register-button login_button">Submit</button>
-                    <span class="password-error-message login_error login-error-message"> Oops, email/password not found. Try again? </span>
-                    <div class="loading-gif">
-                    </div>
-                    <div style="clear:both;"></div>
+                    <button type="submit" class="btn btn-lg btn-primary register-button login_button">
+                        Login
+                    </button>
+                    <span class="password-error-message login_error login-error-message"> 
+                        Oops, email/password not found. Try again? 
+                    </span>
+                    <div class="loading-gif"></div>
                 </form>
-                <img class="snake-drawing2" src="http://fc06.deviantart.net/fs70/f/2012/172/a/5/snake_by_zeusolympia-d54a3z0.jpg"/>
-                <div style="clear:both;"></div>
+                <img class="login-snake" src="/static/img/login-snake.jpg"/>
             </div>
-            <div style="clear:both;"></div>
         </div>
-
-        <div style="clear:both;"></div>
-
     </div>
 
 {% endblock %}
