--- a/truespeak/templates/home.html
+++ b/truespeak/templates/home.html
@@ -8,7 +8,7 @@
 {% block body %}
 
     <div class="container-narrow">
-
+            {% include "share_snippet.html" %}
         <div class="masthead muted">
             <h3 style="text-align:left;margin-left:110px;">
                 Secure your email from eavesdroppers.
@@ -75,4 +75,8 @@
     </div>
 
     <!-- <img class="crazy-snake" src="http://31.media.tumblr.com/eca927ed58e655bd139fa9f269724a03/tumblr_mf09rsPUOg1r1mkubo1_500.gif"/> -->
+{% endblock %}
+
+{% block scripts %}
+    {% include_script "js/share" %}
 {% endblock %}
