--- a/truespeak/templates/register.html
+++ b/truespeak/templates/register.html
@@ -24,7 +24,7 @@
                         <input type="password" class="form-control register-input register_password1" id="exampleInputPassword1" placeholder="Password">
                     </div>
                     <div class="form-group">
-                        <input type="password" class="form-control register-input register_password2" id="exampleInputPassword2" placeholder="Retype Password">
+                        <input type="password" class="form-control register-input register_password2" id="exampleInputPassword2" placeholder="Confirm Password">
                     </div>
                     <button type="submit" class="btn btn-lg btn-primary register-button register_button">
                         Register
