--- a/truespeak/templates/base.html
+++ b/truespeak/templates/base.html
@@ -88,8 +88,8 @@
         <div class="pt-footer">
             <div class="footer-bar"></div>
             <div class="footer-wrapper">
-                <a class="pull-right twitter-link" href="http://www.twitter.com/teamparseltongue"> <img src="https://si0.twimg.com/favicons/favicon.ico">
-                    @teamparseltongue 
+                <a class="pull-right twitter-link" href="http://www.twitter.com/getparseltongue" target="_blank"> <img src="https://si0.twimg.com/favicons/favicon.ico">
+                    @getparseltongue 
                 </a>
                 <a class="pull-right twitter-link" href="mailto:parseltongueextension@gmail.com">
                     <i class="glyphicon glyphicon-envelope"></i>
