--- a/truespeak/templates/login.html
+++ b/truespeak/templates/login.html
@@ -8,21 +8,20 @@
 
 {% block body %}
 
-    <div class="container">
-        <div class="jumbotron welcome-container login-wrapper">
-
-            <div class="over-sound-of-music">
-                <h1 class="sound-of-music-header">
+    <div class="container at-least">
+        <div class="auth-container">
+            <div>
+                <h1 class="auth-header">
                     Sign In
                 </h1>
                 <form role="form">
                     <div class="form-group">
-                        <input type="email" class="form-control register-input login_email" id="exampleInputEmail1" placeholder="Enter email">
+                        <input type="email" class="form-control auth-input login_email" id="exampleInputEmail1" placeholder="Enter email">
                     </div>
                     <div class="form-group">
-                        <input type="password" class="form-control register-input login_password" id="exampleInputPassword1" placeholder="Password">
+                        <input type="password" class="form-control auth-input login_password" id="exampleInputPassword1" placeholder="Password">
                     </div>
-                    <button type="submit" class="btn btn-lg btn-primary register-button login_button">
+                    <button type="submit" class="btn btn-lg btn-primary auth-button login_button">
                         Login
                     </button>
                     <span class="password-error-message login_error login-error-message"> 
