--- a/truespeak/templates/tutorial_snippet.html
+++ b/truespeak/templates/tutorial_snippet.html
@@ -1,3 +1,7 @@
+{% load filters %} 
+
+{% include_style "css/tutorial-snippet" %}
+
 <div id="carousel-example-generic" class="carousel slide">
     <!-- Indicators -->
   <ol class="carousel-indicators">
