--- a/truespeak/templates/base.html
+++ b/truespeak/templates/base.html
@@ -62,14 +62,14 @@
                         <li class="{{ nav_about }}"><a href="/about/">About</a></li>
                         <li  class="{{ nav_team }}"><a href="/team/">Team</a></li>
                         {% if not user.is_authenticated %}
-                            <li class="{{ nav_register }} pt_extension_installed" style="display:none;"><a href="/register/">Register</a></li>
+                            <li class="{{ nav_register }} pt-ext-installed" style="display:none;"><a href="/register/">Register</a></li>
                         {% else %}
                             <li class={{ nav_settings }}><a href="/settings/">Settings</a></li>
                         {% endif %}
                     </ul>
-                    <ul class="nav navbar-nav navbar-right pt_extension_installed">
+                    <ul class="nav navbar-nav navbar-right pt-ext-installed">
                         {% if user.is_authenticated %}
-                            <li class="already-registered"> you are logged in as: <span class="who-are-you">{{ user.username }}</span> </li>
+                            <li class="already-registered"> you are logged in as: <span class="user-name">{{ user.username }}</span> </li>
                             <a href="/logout/" class="btn btn-small btn-success sign-in-button parseltongue_logout">logout</a>
                         {% else %}
                             <li class="already-registered"> already registered? </li>
