--- a/truespeak/templates/register.html
+++ b/truespeak/templates/register.html
@@ -10,23 +10,23 @@
 
     <div class="container">
 
-        <div class="register-container">
+        <div class="auth-container">
 
             <div>
-                <h1 class="register-header">
+                <h1 class="auth-header">
                     Welcome to ParselTongue
                 </h1>
                 <form role="form" class="register_form">
                     <div class="form-group">
-                        <input type="email" class="form-control register-input register_email" id="exampleInputEmail1" placeholder="Enter email">
+                        <input type="email" class="form-control auth-input register_email" id="exampleInputEmail1" placeholder="Enter email">
                     </div>
                     <div class="form-group">
-                        <input type="password" class="form-control register-input register_password1" id="exampleInputPassword1" placeholder="Password">
+                        <input type="password" class="form-control auth-input register_password1" id="exampleInputPassword1" placeholder="Password">
                     </div>
                     <div class="form-group">
-                        <input type="password" class="form-control register-input register_password2" id="exampleInputPassword2" placeholder="Confirm Password">
+                        <input type="password" class="form-control auth-input register_password2" id="exampleInputPassword2" placeholder="Confirm Password">
                     </div>
-                    <button type="submit" class="btn btn-lg btn-primary register-button register_button">
+                    <button type="submit" class="btn btn-lg btn-primary auth-button register_button">
                         Register
                     </button>
                     <div class="loading-gif register-loading"></div>
