--- a/truespeak/templates/settings.html
+++ b/truespeak/templates/settings.html
@@ -7,11 +7,7 @@
 
 {% block body %}
 
-
-    <div class="container-narrow">
-
-        <!-- Main component for a primary marketing message or call to action -->
-        <!-- <div class="jumbotron welcome-container settings-wrapper"> -->
+    <div class="at-least container-narrow">
         <div class="jumbotron settings-wrapper">
 
             <div class="container">
